// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/tgit-tags/index getReleases returns tags from custom registry 1`] = `
Object {
  "registryUrl": "https://tgit.company.com/api/v3",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": "2020-03-04T18:01:37.000Z",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "version": "v1.1.0",
    },
    Object {
      "gitRef": "v1.1.1",
      "version": "v1.1.1",
    },
  ],
  "sourceUrl": "https://tgit.company.com/some/dep2",
}
`;

exports[`modules/datasource/tgit-tags/index getReleases returns tags from custom registry in sub path 1`] = `
Object {
  "registryUrl": "https://my.company.com/tgit",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "releaseTimestamp": "2020-03-04T18:01:37.000Z",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "version": "v1.1.0",
    },
    Object {
      "gitRef": "v1.1.1",
      "version": "v1.1.1",
    },
  ],
  "sourceUrl": "https://my.company.com/tgit/some/dep2",
}
`;

exports[`modules/datasource/tgit-tags/index getReleases returns tags with default registry 1`] = `
Object {
  "registryUrl": "https://git.code.tencent.com",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "version": "v1.1.0",
    },
  ],
  "sourceUrl": "https://git.code.tencent.com/some/dep2",
}
`;
